# trilogy

./: .env  .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  TODO.md  clippy.toml  main.tri  out  t.asm  test.asm  test.tri
trilogy/: Cargo.toml  test.rs
trilogy-analyzer/: Cargo.toml
trilogy-analyzer/src/: analysis.rs  analyzer.rs  lexical_error.rs  lib.rs  scope.rs
trilogy-analyzer/src/analyze/: assert_statement.rs  definitions.rs  document.rs  func.rs  function_assignment.rs  if_statement.rs  lvalue.rs  match_statement.rs  mod.rs  module.rs  module_path.rs  pattern.rs  poetry.rs  proc.rs  prose.rs  rule.rs  statement.rs  static_expression.rs  test.rs
trilogy-codegen/: Cargo.toml  README.md
trilogy-codegen/src/: chunk_writer_ext.rs  entrypoint.rs  evaluation.rs  function.rs  helpers.rs  labeler.rs  lib.rs  module.rs  needs.rs  operator.rs  pattern_match.rs  preamble.rs  procedure.rs  program.rs  query.rs  rule.rs  static_expression.rs
trilogy-codegen/src/context/: context.rs  labeler.rs  mod.rs  program_context.rs  scope.rs  static_member.rs
trilogy-codegen/src/prelude/: chunk_writer_ext.rs  label_maker.rs  mod.rs  stack_tracker.rs  stateful_chunk_writer_ext.rs  type_pattern.rs
trilogy-codegen/tests/: samples.rs
trilogy-ir/: Cargo.toml  README.md
trilogy-ir/src/: analyzer.rs  converter.rs  error.rs  lib.rs  resolver.rs  scope.rs  symbol.rs
trilogy-ir/src/ir/: alias.rs  application.rs  array_comprehension.rs  array_pattern.rs  assert.rs  assignment.rs  assignment_statement.rs  atom_literal.rs  bits.rs  bits_literal.rs  block.rs  boolean_literal.rs  builtin.rs  character_literal.rs  constant_definition.rs  defer.rs  definition.rs  definition_item.rs  definitions.rs  direct_unification.rs  do_expression.rs  element_unification.rs  expression.rs  fn_expression.rs  for.rs  for_statement.rs  function.rs  function_definition.rs  given_handler.rs  glue_pattern.rs  handled.rs  handler.rs  identifier.rs  if_else.rs  iterator.rs  iterator_comprehension.rs  let.rs  lookup.rs  match.rs  mod.rs  (+22 more)
trilogy-ir/src/visitor/: bindings.rs  can_evaluate.rs  identifiers.rs  is_constant.rs  is_single_valued_pattern.rs  mod.rs  references.rs  validate_for_rule.rs
trilogy-lexical-ir/: Cargo.toml  README.md
trilogy-lexical-ir/src/: analysis.rs  analyzer.rs  assignment.rs  binary_direction.rs  binary_operation.rs  branch.rs  call.rs  code.rs  collect.rs  cond.rs  count_set.rs  direction.rs  evaluation.rs  explicit.rs  export.rs  id.rs  implicit.rs  item.rs  item_key.rs  lexical_error.rs  lib.rs  lvalue.rs  module.rs  operation.rs  reference.rs  rename.rs  scope.rs  step.rs  test.rs  value.rs  violation.rs
trilogy-lexical-ir/src/ir/: collect.rs  evaluation.rs  id.rs  item.rs  item_key.rs  mod.rs  module.rs  reference.rs
trilogy-llvm/: Cargo.toml  build.rs
trilogy-llvm/core/: .clang-format  .clang-tidy  bigint.c  bigint.h  core.c  core.h  hash.c  hash.h  internal.c  internal.h  rational.c  rational.h  runtime.h  trace.h  trilogy.c  trilogy.h  trilogy_array.c  trilogy_array.h  trilogy_atom.c  trilogy_atom.h  trilogy_bits.c  trilogy_bits.h  trilogy_boolean.c  trilogy_boolean.h  trilogy_callable.c  trilogy_callable.h  trilogy_character.c  trilogy_character.h  trilogy_module.c  trilogy_module.h  trilogy_number.c  trilogy_number.h  trilogy_record.c  trilogy_record.h  trilogy_reference.c  trilogy_reference.h  trilogy_set.c  trilogy_set.h  trilogy_string.c  trilogy_string.h  (+8 more)
trilogy-llvm/src/: bare.rs  call.rs  codegen.rs  constant.rs  continue_in_scope.rs  core.rs  current_continuation.rs  debug_info.rs  definitions.rs  entrypoint.rs  expression.rs  function.rs  internal.rs  lib.rs  module.rs  pattern_match.rs  procedure.rs  query.rs  rule.rs  runtime.rs  scope.rs  test.rs  types.rs
trilogy-llvm/src/codegen/: cleanup.rs  continuation_point.rs  debug_info.rs  definitions.rs  mod.rs  snapshot.rs  variables.rs
trilogy-llvm/src/expression/: builtin.rs  mod.rs
trilogy-llvm/src/stdlib/: atom_rt.rs  core.rs  libc.rs  mod.rs
trilogy-loader/: Cargo.toml  README.md
trilogy-loader/src/: binder.rs  cache.rs  lib.rs  linker.rs  loader.rs  location.rs  module.rs  program.rs  wip_binder.rs
trilogy-parser/: Cargo.toml  README.md
trilogy-parser/src/: format.rs  lib.rs  parse.rs  parser.rs  spanned.rs  test.rs  token_pattern.rs
trilogy-parser/src/syntax/: alias.rs  amble.rs  application.rs  array_comprehension.rs  array_literal.rs  array_pattern.rs  assert_statement.rs  assignment_statement.rs  atom_literal.rs  become_expression.rs  binary_operation.rs  binding_pattern.rs  bits_literal.rs  block.rs  boolean_literal.rs  boolean_query.rs  boolean_unification.rs  break_expression.rs  break_statement.rs  call.rs  call_expression.rs  call_statement.rs  cancel_expression.rs  cancel_statement.rs  character_literal.rs  constant_definition.rs  continue_expression.rs  continue_statement.rs  defer_statement.rs  definition.rs  direct_unification.rs  do_expression.rs  do_head.rs  document.rs  documentation.rs  element_unification.rs  else_handler.rs  end_expression.rs  end_statement.rs  exit_expression.rs  (+101 more)
trilogy-vm/: Cargo.toml  README.md
trilogy-vm/src/: cactus.rs  global_stats.rs  lib.rs
trilogy-vm/src/bytecode/: asm.rs  chunk.rs  disassemble.rs  instruction.rs  mod.rs  op_code.rs  reader.rs
trilogy-vm/src/cactus/: branch.rs  cactus.rs  mod.rs  pointer.rs  slice.rs
trilogy-vm/src/gc/: dumpster.rs  garbage_collector.rs  mod.rs
trilogy-vm/src/program/: builder.rs  mod.rs  reader.rs  writer.rs
trilogy-vm/src/runtime/: array.rs  atom.rs  bits.rs  continuation.rs  eq.rs  mod.rs  native.rs  number.rs  procedure.rs  record.rs  runtime.rs  set.rs  string.rs  struct.rs  tuple.rs  value.rs
trilogy-vm/src/vm/: chunk.rs  continuation.rs  error.rs  execution.rs  global_stats.rs  mod.rs  program.rs  program_reader.rs  stack.rs  stats.rs  virtual_machine.rs
trilogy-vm/tests/: calls.rs  del_con.rs  integers.rs  numbers.rs  static_program.rs
trilogy/src/: ariadne.rs  asm_program.rs  dev.rs  lib.rs  location.rs  main.rs  native_module.rs  program.rs
trilogy/tests/: samples.rs
(+694 files in other folders)
