[workspace]
resolver = "2"
members = [
    "trilogy",
    "trilogy-derive",
    "trilogy-scanner",
    "trilogy-parser",
    "trilogy-parser-derive",
    "trilogy-ir",
    "trilogy-codegen",
    "trilogy-vm",
    "trilogy-vm-derive",
]

[profile.release]
panic = "abort"
#
[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
