[package]
name = "trilogy-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trilogy-parser = { path = "../trilogy-parser/" }
trilogy-lexical-ir = { path = "../trilogy-lexical-ir/" }
source-span = "2.7.0"
bitvec = "1.0.1"
num = "0.4.0"
