[package]
name = "trilogy-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trilogy-ir = { path = "../trilogy-ir" }
trilogy-vm = { path = "../trilogy-vm" }

[dev-dependencies]
trilogy-loader = { path = "../trilogy-loader/" }
