[package]
name = "trilogy-ir"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-span = "2.7.0"
bitvec = "1.0.1"
num = "0.4.0"
trilogy-parser = { path = "../trilogy-parser/" }
once_cell = "1.17.1"
