[package]
name = "trilogy-lexical-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trilogy-parser = { path = "../trilogy-parser/" }
trilogy-loader = { path = "../trilogy-loader/" }
source-span = "2.7.0"
