[package]
name = "trilogy-llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
num = "0.4.3"
source-span = "2.7.0"
trilogy-ir = { path = "../trilogy-ir/" }
trilogy-parser = { path = "../trilogy-parser/" }
url = "2.5.4"

[lints]
workspace = true
