[package]
name = "trilogy-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
trilogy-scanner = { path = "../trilogy-scanner/" }
trilogy-parser = { path = "../trilogy-parser/" }
trilogy-ir = { path = "../trilogy-ir/" }
trilogy-codegen = { path = "../trilogy-codegen/" }
trilogy-vm = { path = "../trilogy-vm/" }
url = "2.3.1"
