[package]
name = "trilogy-parser"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
lax = []
dev = []

[dependencies]
trilogy-parser-derive = { path = "../trilogy-parser-derive/" }
trilogy-scanner = { path = "../trilogy-scanner/" }
source-span = "2.7.0"
peekmore = { version = "1.0.0", features = ["smallvec"] }
bitvec = "1.0.1"
num = "0.4.0"
