[package]
name = "trilogy-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] 
multithread = []    # multithread disabled by default, reducing overhead
64bit = []
32bit = []          # 32bit has been determined to usually be most performant
stats = []          # performance cost

[dependencies]
bitvec = "1.0.1"
num = "0.4.0"
trilogy-vm-derive = { path = "../trilogy-vm-derive/" }
source-span = "2.7.0"
log = "0.4.20"
rangemap = "1.4.0"
