[package]
name = "trilogy-vm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
multithread = []    # multithread disabled by default, reducing overhead
64bit = []
32bit = []          # 32bit has been determined to usually be most performant
stats = []          # performance cost
json = ["dep:serde_json", "serde"]
sqlx = ["dep:sqlx"]
serde = ["dep:serde", "num/serde", "bitvec/serde"]

[dependencies]
bitvec = "1.0.1"
num = "0.4.0"
trilogy-vm-derive = { path = "../trilogy-vm-derive/" }
source-span = "2.7.0"
log = "0.4.20"
serde = { version = "1.0.197", optional = true, features = ["derive", "rc"] }
serde_json = { version = "1.0.115", optional = true, features = ["arbitrary_precision"] }
sqlx = { version = "0.8.1", optional = true, features = ["bigdecimal", "bit-vec"] }
uuid = "1.8.0"
