[package]
name = "trilogy"
description = "The Trilogy Programming Language"
version = "0.1.0"
edition = "2021"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
repository = "https://github.com/foxfriends/trilogy/"
keywords = ["programming-language", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dev", "llvm", "std"]
dev = []
lax = ["trilogy-parser/lax"]

macros = ["trilogy-derive"]
std = ["macros"]

async = ["dep:tokio"]
regex = ["dep:regex"]
json = ["trilogy-vm/json", "dep:serde_json"]
sql = ["dep:sqlx", "trilogy-vm/sqlx", "async", "json"]
postgres = ["sqlx/postgres", "sql"]
multithread = ["trilogy-vm/multithread"]

64bit = ["trilogy-vm/64bit"]
32bit = ["trilogy-vm/32bit"]
stats = ["trilogy-vm/stats"]

tvm = ["dep:trilogy-vm", "dep:trilogy-codegen", "dev", "std", "regex", "json", "sql", "postgres", "async"]
llvm = ["dep:trilogy-llvm"]

[dependencies]
clap = { version = "4.0.32", features = ["derive", "color"] }
colored = { version = "2.0.0" }
num = "0.4.0"
pretty = { version = "0.11.3" }
trilogy-scanner = { path = "../trilogy-scanner/" }
trilogy-parser = { path = "../trilogy-parser/" }
trilogy-ir = { path = "../trilogy-ir/" }
trilogy-codegen = { path = "../trilogy-codegen/", optional = true }
trilogy-vm = { path = "../trilogy-vm/", optional = true }
trilogy-llvm = { path = "../trilogy-llvm/", optional = true }
trilogy-derive = { path = "../trilogy-derive/", optional = true }
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"
home = "0.5.5"
ariadne = { version = "0.4.0", features = ["auto-color"] }
source-span = "2.7.0"
bitvec = "1.0.1"
daggy = "0.8.0"
regex = { version = "1.10.2", optional = true }
pretty_env_logger = "0.5.0"
log = "0.4.20"
serde_json = { version = "1.0.115", optional = true }
sqlx = { version = "0.7.4", optional = true, features = ["runtime-tokio", "tls-rustls", "bigdecimal", "json", "uuid"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"], optional = true }
