[package]
name = "trilogy"
description = "The Trilogy Programming Language"
version = "0.1.0"
edition = "2024"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
repository = "https://github.com/foxfriends/trilogy/"
keywords = ["programming-language", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["dev"]
dev = []
lax = ["trilogy-parser/lax"]

[dependencies]
clap = { version = "4.0.32", features = ["derive", "color"] }
colored = { version = "2.0.0" }
num = "0.4.0"
pretty = { version = "0.11.3" }
trilogy-scanner = { path = "../trilogy-scanner/" }
trilogy-parser = { path = "../trilogy-parser/" }
trilogy-ir = { path = "../trilogy-ir/" }
trilogy-llvm = { path = "../trilogy-llvm/" }
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.1"
home = "0.5.5"
ariadne = { version = "0.4.0", features = ["auto-color"] }
source-span = "2.7.0"
bitvec = "1.0.1"
daggy = "0.8.0"
pretty_env_logger = "0.5.0"
log = "0.4.20"
